Add CommentDTO, update comment CRUD and implement comment pagination